# eps_mcp

./: .gitignore  CUSTOMIZE.md  Cargo.toml  eps.toml
.github/workflows/: release.yml
Scripts/: install.sh
docs/adr/: 0001-docs-over-actions.md
src/: main.rs
src/tools/: knowledge.rs  mod.rs  registry.rs
