[package]
name = "eps_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ureq = "2"
rmcp = { version = "0.17.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
